external/lib25519-20241004/build/arm64/pow/inv25519/arm64-maa4-intmul/shared/result-compile-fe25519_square
fe25519_square.S:100:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
